packages/example/content/boomerang-cicd/7.0.0/how-to-guide/10.deployment-types.md
---
title: Deployment Types
index: 10
---

# Deployment Types

Boomerang CICD has many deployment types (integrations) out of the box. The following detail goes through the different options and how they can be used with some advanced configuration.

**Please Note:** This page is still under construction.

| **Type** | **Support** |  **Useful For** |
| :---: | :---: | --- |
| Container Registry | stable | Enables distributing the built container from the internal container registry to another container registry. This can be used if you have another cluster that you want the container available locally or for public or release iterations that exist in another registry. |
| Kubernetes | stable | Enables deploying with either a default kubernetes yaml file OR a provided kubernetes yaml file. Additionally it has the ability to replace variables (see below for details). |
| Helm | stable | Allows the component to be deployed to a helm chart and target a specific values yaml element for the version. Additionally multiple helm charts can be targetted. Currently only supports Helm v2. |
| Tomcat| stable | Deploy a WAR to a tomcat server. |
| MaaS360 | stable | Deploy a mobile application to MaaS360. |
| Microsoft App Center | stable | Deploy a mobile application to Microsoft App Center. |

## Container Registry

This supports both public and private container registries and uses the skopeo open source library to do the publishing of the image to the registry.

If you are using a public registry you can leave the Username and Password fields blank.

## Kubernetes

By default the kubernetes deployment will ask for kubernetes integration information and will deploy using an out of the box yaml file.

An additional benefit is the capability to replace properties in the file.

### Property Replacement

Any property that is available in the properties level of the [Boomerang CICD properties system](/boomerang-cicd/how-to-guide/modes-and-properties).

The token delimiters is the `@` symbol. With this we look for specific properties between two `@` symbols and if a property matches we replace.

An example file could look like:

```yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: @process/org@-@process/component.name@
  namespace: @deploy.kube.namespace@
  annotations:
    platform: boomerang
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      org: @process/org@
      component: @process/component.name@
      env: @system/stage.name@
```

The following table lists the properties that are used in the out of the box yaml file that can be set using the Boomerang CICD properties system to influence the generation of the file

| Property | Useful For |
| --- | --- |
| `docker.image.name` | Sets the container name at both packaging time and also what is used in the replacement for the out of the box yaml |
| `deploy.kubernetes.container.port` | The kubernetes port listed in the deployment definition for access to the container. This will default to 8080. |
| `deploy.kubernetes.service.port` | The kubernetes port listed in the service definition. This will default to 5000. |

Please note that the `process/` prefixed properties are ones created at the runtime of this deploy activity are only available at this time.

### Bring Your Own Files

You can bring your own kubernetes files by specifying the following properties and set these at the component or version level.

| Property | Value | Useful For |
| --- | --- |
| `deploy.kubernetes.file` | `\yamls\kube.yaml` | This needs to be the path to a file in the git repository from the root level of the git repository. |
| `deploy.git.clone` | `true` | Clones the git repository as part of the deploy step. |

## Helm

By default, you can specify all the properties that are available on the Stage after choosing Deploy Type of `helm`. Majority of these are to do with the kubernetes integration.

However two properties can very easily be set at the component or version level based on the integration. These are Helm Chart Name and Helm Release Name.

Helm Release Name is optional and the deployment script will figure it out.

### Helm Chart Name

This is useful if you want to target multiple helm charts with the one component i.e. a common service. OR if you want to specify on the component rather than fixed on the Stage in the case that multiple components share the same Pipeline and Stages.

To do this, enter `${p:helm.chart}` as the value for the field on the stage and then create or set this property on the Component or Version

### Helm Release Name

This is useful if you want to be able to target a specific release but you dont necessarily know the chart name.