packages/example/content/boomerang-cicd/7.2.0/how-to-guide/10.deployment-types.md
---
title: Deployment Types
index: 10
---

# Deployment Types

Boomerang CICD has many deployment types (integrations) out of the box. The following detail goes through the different options and how they can be used with some advanced configuration.

**Please Note:** This page is still under construction.

| **Type** | **Support** |  **Useful For** |
| :---: | :---: | --- |
| Container Registry | stable | Enables distributing the built container from the internal container registry to another container registry. This can be used if you have another cluster that you want the container available locally or for public or release iterations that exist in another registry. |
| Kubernetes | stable | Enables deploying with either a default kubernetes yaml file OR a provided kubernetes yaml file. Additionally it has the ability to replace variables (see below for details). |
| Helm | stable | Allows the component to be deployed to a helm chart and target a specific values yaml element for the version. Additionally multiple helm charts can be targetted. Currently only supports Helm v2. |
| Tomcat| stable | Deploy a WAR to a tomcat server. |
| MaaS360 | stable | Deploy a mobile application to MaaS360. |
| Microsoft App Center | stable | Deploy a mobile application to Microsoft App Center. |

## Container Registry

This supports both public and private container registries and uses the [skopeo](https://github.com/containers/skopeo) open source library to do the publishing of the image to the registry.

The following table lists the properties that are requested on the Stages Deploy configuration. The example values follow what is required to use the IBM Cloud Container Registry service

| Property | Useful For | Example Value |
| --- | --- | --- |
| `deploy.container.registry.host` | The destination container registry host | `us.icr.io` |
| `deploy.container.registry.port` | The destination container registry port. This is optional and can be left blank. | |
| `deploy.container.registry.username` | The username credential for accessing the destination registry. For an unauthenticated registry you can leave this field blank. | `iamapikey` |
| `deploy.container.registry.password` | The password credential for accessing the destination registry. For an unauthenticated registry you can leave this field blank. | `token` |
| `deploy.container.registry.path` | The path to prefix the container image name and version (`name:version`). Replace namespace with the registry namespace or organization prefix such as team name. | `/namespace/ise` or `/boomerang/ise` |

## Kubernetes

By default the kubernetes deployment will ask for kubernetes integration information and will deploy using an out of the box yaml file.

An additional benefit is the capability to replace properties in the file.

### Property Replacement

Any property that is available in the properties level of the [Boomerang CICD properties system](/boomerang-cicd/how-to-guide/modes-and-properties).

The token delimiters is the `@` symbol. With this we look for specific properties between two `@` symbols and if a property matches we replace.

An example file could look like the following default file used:

```yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: @process/org@-@process/component.name@
  namespace: @deploy.kube.namespace@
  annotations:
    platform: boomerang
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      org: @process/org@
      component: @process/component.name@
      env: @system/stage.name@
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        org: @process/org@
        component: @process/component.name@
        env: @system/stage.name@
    spec:
      containers:
        - image: @process/container.registry.host@:@process/container.registry.port@/@process/container.registry.path@/@process/docker.image.name@:@version.name@
          imagePullPolicy: Always
          name: cntr
          ports:
            - name: port-cntr
              containerPort: @process/container.port@
              protocol: TCP
          env:
            - name: DEPLOY_TARGET
              value: "@system/stage.name@"
      imagePullSecrets:
        - name: @process/registry.key@
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: @process/org@-@process/component.name@
  namespace: @deploy.kube.namespace@
spec:
  ports:
    - name: port-svc
      port: @process/service.port@
      protocol: TCP
      targetPort: port-cntr
  selector:
    org: @process/org@
    component: @process/component.name@
    env: @system/stage.name@
  sessionAffinity: None

```

The following table lists the properties that are used in the out of the box yaml file that can be set using the Boomerang CICD properties system to influence the generation of the file

| Property | Useful For |
| --- | --- |
| `version.name` | Sets the container version based on the version in CICD. Recommended to set your Trigger to Tag and use a semver2 aligned format. |
| `docker.image.name` | Sets the container name at both packaging time and also what is used in the replacement for the out of the box yaml |
| `deploy.container.registry.host` | Sets the container registry host that is used to pull from at run time once the yaml file is applied. Defaults to the platforms container registry host. |
| `deploy.container.registry.port` | Sets the container registry port that is used to pull from at run time once the yaml file is applied. Defaults to the platforms container registry port. |
| `deploy.container.registry.path` |  The path to prefix the container image name and version (`name:version`). Defaults to the Boomerang CICD team name with only lowercase, uppercase, and numbers. If you have used the container registry deployment target, this should match that. |
| `deploy.kubernetes.container.port` | The kubernetes port listed in the deployment definition for access to the container. This will default to 8080. |
| `deploy.kubernetes.service.port` | The kubernetes port listed in the service definition. This will default to 80. |
| `deploy.kubernetes.ingress` | Whether to create, and apply, a default ingress. We recommend caution, as creating an ingress on an unprotected public cluster would expost to the internet. Defaults to `false`. |
| `deploy.kubernetes.registry.key` | Specify a custom secret name for imagePullSecrets. Defaults to `boomerang.registrykey`. |

Please note that the `process/` prefixed properties are ones created at the runtime of this deploy activity are only available at this time.

### Default Ingress

```yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: @process/org@-@process/component.name@
  namespace: @deploy.kube.namespace@
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: @deploy.kube.host@
      http:
        paths:
          - path: /@process/org@/@process/component.name@(/|$)(.*)
            backend:
              serviceName: @process/org@-@process/component.name@
              servicePort: port-svc
```

| Property | Useful For |
| --- | --- |
| `deploy.kubernetes.ingress` | Whether to create, and apply, a default ingress. We recommend caution, as creating an ingress on an unprotected public cluster would expost to the internet. Defaults to `false`. |

### Bring Your Own Files

You can bring your own kubernetes files by specifying the following properties and set these at the component or version level.

| Property | Example Value | Useful For |
| --- | --- | --- |
| `deploy.kubernetes.path` | `/yamls` | This needs to be the path to the files in the git repository from the root level of the git repository. |
| `deploy.kubernetes.file` | `.*\.yaml$` | A regular expression for file names. |
| `deploy.git.clone` | `true` | Clones the git repository as part of the deploy step. Typically we do not clone down the git repository as there is no longer any dependency between the source code and the object being deployed. However in this case it is dependent on configuration or definition files in the repository. |

## Helm

By default, you can specify all the properties that are available on the Stage after choosing Deploy Type of `helm`. Majority of these are to do with the kubernetes integration.

However two properties can very easily be set at the component or version level based on the integration. These are Helm Chart Name and Helm Release Name.

Helm Release Name is optional and the deployment script will figure it out.

### Helm Chart Name

This is useful if you want to target multiple helm charts with the one component i.e. a common service. OR if you want to specify on the component rather than fixed on the Stage in the case that multiple components share the same Pipeline and Stages.

To do this, enter `${p:helm.chart}` as the value for the field on the stage and then create or set this property on the Component or Version

### Helm Release Name

This is useful if you want to be able to target a specific release but you dont necessarily know the chart name.